--- a/.gitignore
+++ b/.gitignore
@@ -59,7 +59,7 @@ Desktop.ini
 *.temp
 supabase.txt
 
-# Documentation temporal (mantener solo README.md y QUICK_START.md)
+# Documentation temporal
 CHECK_SETUP.md
 DEV_MODE.md
 ERRORS_FIXED.md
@@ -67,6 +67,10 @@ NEXT_STEPS.md
 SETUP_STATUS.md
 START_HERE.md
 STATUS.md
+
+# Archivos de setup (mantener solo localmente)
+SUPABASE_SETUP.sql
+QUICK_START.md
 
 # Lock files (opcional - descomentar si no quieres trackear)
 # bun.lock
