fix: eliminar campos capacidad y responsable de bodegas y corregir errores de linting
- Eliminados campos capacidad y responsable del modelo Bodega (no existen en Prisma schema)
- Actualizado warehouses.repository.ts para remover referencias a estos campos
- Actualizado schema de validación en actions/index.ts
- Actualizado componente bodegas/index.tsx para remover campos del formulario y tabla
- Corregidos errores de linting:
  - Cambiado isNaN por Number.isNaN
  - Removidos imports no usados
  - Reemplazado console por process.stderr.write en script
  - Corregido uso de index como key en inventory.tsx
  - Agregado script check-file-lengths.ts para verificar archivos con más de 400 líneas

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "biome check",
     "format": "biome format --write",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "check-file-lengths": "bun check-file-lengths.ts"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
