feat: agregar campos pvp, descripcion y estado a productos y centroCostoId a bodegas
- Agregar campo PVP (Precio de Venta al Público) a formulario de productos
- Agregar campo descripcion a formulario de productos
- Agregar campo estado (switch) a formulario de productos
- Agregar campo centroCostoId (select) a formulario de bodegas
- Actualizar schemas de validación para incluir nuevos campos
- Actualizar repositorios para manejar nuevos campos
- Actualizar componentes de formularios con nuevos campos UI
- Actualizar acciones del servidor para validar nuevos campos

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "biome check",
     "format": "biome format --write",
     "postinstall": "prisma generate",
-    "check-file-lengths": "bun check-file-lengths.ts"
+    "lengths": "bun check-file-lengths.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
