--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "prisma": "^6.18.0",
+    "shadcn": "^3.5.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
